--- a/stylesheets/level2.css
+++ b/stylesheets/level2.css
@@ -34,8 +34,7 @@
     outline: none;
 }
 
-.word-container, 
-.word-container2 {
+.word-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,8 +42,7 @@
     padding: 1rem;
 }
 
-.word-container img,
-.word-container2 img {
+.word-container img {
     height: 80px;
     width: 80px;
 }
@@ -52,24 +50,21 @@
 
 /* -----------------media queries----------------- */
 @media (max-width: 1060px) {
-    .word-container img,
-    .word-container2 img {
+    .word-container img {
         height: 60px;
         width: 60px;
     }
 }
 
 @media (max-width: 810px) {
-    .word-container img,
-    .word-container2 img {
+    .word-container img {
         height: 40px;
         width: 40px;
     }
 }
 
 @media (max-width: 650px) {
-    .word-container img,
-    .word-container2 img {
+    .word-container img {
         height: 30px;
         width: 30px;
     }
@@ -86,12 +81,10 @@
     .content-div button {
         margin-top: 1rem;
     }
-    .word-container,
-    .word-container2 {
+    .word-container {
         margin-top: 1rem;
     }
-    .word-container img,
-    .word-container2 img {
+    .word-container img {
         height: 25px;
         width: 25px;
     }
