--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -33,8 +33,18 @@ body {
     cursor: pointer;
 }
 
-.heading-container img:active {
-    transform: scale(.9);
+.heading-container img.hand {
+    transform: scale(1);
+    transition: all 0.5s ease-in;
+}
+
+.heading-container img.hand:hover,
+.heading-container img.hand:focus {
+    transform: scale(0.9) rotate(-10deg);
+}
+
+.heading-container img.hand:active {
+    transform: scale(1.3) rotate(270deg);
 }
 
 .heading-text {
@@ -58,6 +68,11 @@ body {
     font-family: 'Share Tech Mono', monospace;
 }
 
+.high-five-tooltip {
+    font-family: 'Share Tech Mono', monospace;
+    text-align: center;
+}
+
 /* ------------ nav triangle ----------- */
 
 .nav-container {
@@ -66,10 +81,6 @@ body {
     right: 0;
     z-index: 100;
 }
-
-/* .nav-link-container>.link-list-item.home {
-    display: none;
-} */
 
 .triangle {
     width: 0;
