--- a/stylesheets/level1.css
+++ b/stylesheets/level1.css
@@ -23,6 +23,42 @@
     font-size: 2rem;
 }
 
+/* z-index of fixed header = 10, tooltip should be lower */
+.ASL-letter-tooltip {
+    z-index: 1;
+}
+
+/* source: https://css-tricks.com/making-css-animations-feel-natural/ */
+@keyframes bounce {
+    0% {
+        transform: scale(1, 1) translateY(0);
+    }
+
+    10% {
+        transform: scale(1.1, .9) translateY(0);
+    }
+
+    30% {
+        transform: scale(.9, 1.1) translateY(-75px);
+    }
+
+    50% {
+        transform: scale(1.05, .95) translateY(0);
+    }
+
+    57% {
+        transform: scale(1, 1) translateY(-7px);
+    }
+
+    64% {
+        transform: scale(1, 1) translateY(0);
+    }
+
+    100% {
+        transform: scale(1, 1) translateY(0);
+    }
+}
+
 /* ---------------media queries---------- */
 @media (max-width: 500px) {
     .content-div {
@@ -44,6 +80,7 @@
     .content-div {
         left: 11em;
     }
+
     .content-div p:first-child {
         font-size: 1.2rem;
     }
