--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -100,7 +100,7 @@ body {
     list-style-type: none;
 }
 
-.triangle li {
+.triangle .link-list-item {
     margin-top: 1rem;
     text-align: center;
 }
@@ -119,7 +119,7 @@ body {
     font-size: 1.7rem;
 }
 
-.triangle li:active {
+.triangle .link-list-item:active {
     transform: scale(.9);
 }
 
