fixed bg color of counter span

--- a/stylesheets/level2.css
+++ b/stylesheets/level2.css
@@ -24,7 +24,7 @@
 
 .content-div i,
 .content-div>p>.timer,
-.content-div>p>.counter {
+.content-div span.counter {
     background-color: yellow;
 }
 
