created three new blob classes--one for each of the three bg patterns--to vary the blob shapes

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -188,9 +188,20 @@ body {
     width: 90%;
     height: 70%;
     margin: 0 auto;
-    border-radius: 13% 87% 34% 66% / 54% 49% 51% 46%;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
     z-index: 1;
+}
+
+.content-blob.blob1 {
+    border-radius: 13% 87% 34% 66% / 54% 49% 51% 46%;
+}
+
+.content-blob.blob2 {
+    border-radius: 50% 50% 27% 73% / 46% 53% 47% 54%;
+}
+
+.content-blob.blob3 {
+    border-radius: 61% 39% 70% 30% / 46% 60% 40% 60%;
 }
 
 .content-blob.yellow {
