--- a/stylesheets/level3.css
+++ b/stylesheets/level3.css
@@ -25,7 +25,6 @@
     outline: none;
 }
 
-
 /* ------------------lightbox------------- */
 #lightbox {
     position: fixed;
@@ -46,9 +45,33 @@
 
 #lightbox.active p {
     color: #fff;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
 }
 
 #lightbox.active div {
     filter: grayscale(1);
+}
+
+/* media queries ------------------------- */
+@media (min-width: 800px) {
+    #player1>iframe,
+    #player2>iframe {
+        width: 50em;
+        height: 25em;
+    }
+}
+
+@media (min-width: 1200px) {
+    #player1,
+    #player2 {
+        width: 80%;
+        height: 80%;
+    }
+
+    #player1>iframe,
+    #player2>iframe {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: auto 16 / 9;
+    }
 }
