fixed iframe width & tweaked nav layout for XS-S screens

--- a/stylesheets/level3.css
+++ b/stylesheets/level3.css
@@ -53,6 +53,14 @@
 }
 
 /* media queries ------------------------- */
+@media (max-width: 580px) {
+    #player1>iframe,
+    #player2>iframe {
+        width: 24em;
+        height: 12em;
+    }
+}
+
 @media (min-width: 800px) {
     #player1>iframe,
     #player2>iframe {
